| along with this program; if not, write to the Free Software               |
| Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA |
+---------------------------------------------------------------------------+

+---------------------------+
| Release Max v0.3.32-alpha |
+---------------------------+

2007-02-02  Admin       Bug         Fixed #101 - ID's missing from URLs in advertiser-index (Chris)
2007-02-01  Admin       Bug         Fixed #104 - JavaScript error in various settings pages (Chris)
2007-02-01  Admin       Bug         Fixed #103 - SWF files become uncompressed by the SWF converter (Chris)
2007-02-01  Admin       Bug         Fixed #102 - SWF converter broken with FTP stored files (>8kb) (Chris)
2007-02-01  Maintenance Bug         Fixed #100 - Time targeting for high priority banners not working (Chris)
2007-01-18  General     Feature     Fixed #26 - Added campaign capping (Andrew)
2007-01-17  Delivery    Bug         Fixed #38 - {url_prefix} replacement broken (Matteo)
2007-01-17  Admin       Feature     Fixed #36, refs #37 - Some improvements to the channel ACL plugin (Chris)
2007-01-15  Admin       Bug         Fixed #2 - All advertisers are shown as inactive (Chris)
2007-01-09  Maintenance Feature     Fixed #11 - Changes to database schema to improve MPE performance (Andrew)
2007-01-05  DAL         Feature     Fixed #10 - Improved DAL to use IN format SQL for performance (Andrew)
2006-12-04  Delivery    Feature     Fixed #1017 - Allow fl.js file to be specified by full URL (Chris)
2006-12-04  Admin       Bug         Fixed #1016 - Duplicate document.context line in JS invocation (Chris)

+-------------------------------+
| Release Max v0.3.31-alpha-pr2 |
+-------------------------------+

2007-01-19  Admin       Bug         Fixed #47 - Fixed errors in upgrade script in
                                    Admin::Upgrade::_upgradeToThreeThrtyOneAlpha (Radek)